got xp working