@@ -7,6 +7,7 @@ import home.betiusage.entities.SubGoal;
 import home.betiusage.entities.Tracking;
 import home.betiusage.errorHandling.exception.NotFoundException;
 import home.betiusage.repositories.GoalRepository;
+import home.betiusage.repositories.TrackingRepository;
 import jakarta.transaction.Transactional;
 import org.springframework.stereotype.Service;
 
@@ -17,9 +18,11 @@ import java.util.stream.Collectors;
 @Service
 public class GoalService {
     private final GoalRepository goalRepository;
+    private final TrackingRepository trackingRepository;
 
-    public GoalService(GoalRepository goalRepository) {
+    public GoalService(GoalRepository goalRepository, TrackingRepository trackingRepository) {
         this.goalRepository = goalRepository;
+        this.trackingRepository = trackingRepository;
     }
 
     public List<GoalDTO> findAll() {
@@ -55,9 +58,6 @@ public class GoalService {
         if (goalDTO.getName() != null) {
             existingGoal.setName(goalDTO.getName());
         }
-        if (goalDTO.getCompleted() != null) {
-            existingGoal.setCompleted(goalDTO.getCompleted());
-        }
 
         if (goalDTO.getSubGoals() != null) {
             existingGoal.setSubGoals(
@@ -73,6 +73,61 @@ public class GoalService {
         }
 
         return toDTO(goalRepository.save(ToEntity(goalDTO)));
+    }
+
+    @Transactional
+    public GoalDTO updateGoalCompletedStatus(GoalDTO goalDTO, Long id) {
+        if (id == null) {
+            throw new NotFoundException("ID should not be null");
+        }
+
+        Goal existingGoal = goalRepository.findById(id)
+                .orElseThrow(() -> new NotFoundException("Goal not found with id: " + id));
+
+        // Check if trying to mark goal as completed
+        if (goalDTO.getCompleted() != null && goalDTO.getCompleted()) {
+            // Verify all subgoals are completed
+            boolean allSubgoalsCompleted = existingGoal.getSubGoals().isEmpty() ||
+                    existingGoal.getSubGoals().stream()
+                            .allMatch(sg -> sg.getCompleted() != null && sg.getCompleted());
+
+            if (!allSubgoalsCompleted) {
+                throw new IllegalStateException("Cannot mark goal as completed when subgoals are incomplete");
+            }
+
+            // Only award XP if the goal wasn't previously completed
+            boolean wasAlreadyCompleted = existingGoal.getCompleted() != null && existingGoal.getCompleted();
+            if (!wasAlreadyCompleted) {
+                awardXpForGoalCompletion(existingGoal);
+            }
+        }
+
+        // Update the goal's completion status
+        if (goalDTO.getCompleted() != null) {
+            existingGoal.setCompleted(goalDTO.getCompleted());
+        }
+
+        // Save and return the updated goal
+        return toDTO(goalRepository.save(existingGoal));
+    }
+
+    private void awardXpForGoalCompletion(Goal goal) {
+        Tracking tracking = goal.getTracking();
+        if (tracking == null) {
+            return; // No tracking to update
+        }
+
+        // Initialize XP if it's null
+        if (tracking.getXp() == null) {
+            tracking.setXp(0);
+        }
+
+        // Award XP for goal completion
+        tracking.setXp(tracking.getXp() + XpService.getGoalCompletionBonusXp());
+
+        // Save the tracking with updated XP
+        trackingRepository.save(tracking);
+
     }
 
     @Transactional
@@ -109,6 +164,7 @@ public class GoalService {
 
         return goalDTO;
     }
+
 
     @Transactional
     public GoalDTO deleteSubgoals(Long id) {
@@ -160,28 +216,35 @@ public class GoalService {
         goalDTO.setId(goal.getId());
         goalDTO.setName(goal.getName());
         goalDTO.setCompleted(goal.getCompleted());
+        goalDTO.setTrackingId(goal.getTracking() != null ? goal.getTracking().getId() : null);
 
-        if (goal.getSubGoals() != null) {
-            goalDTO.setSubGoals(
-                    goal.getSubGoals().stream()
-                            .map(subGoal -> {
-                                SubGoalDTO subGoalDTO = new SubGoalDTO();
-                                subGoalDTO.setId(subGoal.getId());
-                                subGoalDTO.setName(subGoal.getName());
-                                subGoalDTO.setCompleted(subGoal.getCompleted());
-                                return subGoalDTO;
-                            })
-                            .toList()
-            );
+        if (goal.getSubGoals() != null && !goal.getSubGoals().isEmpty()) {
+            List<SubGoalDTO> subGoalDTOs = goal.getSubGoals().stream()
+                    .map(this::toSubGoalDTO)  // Make sure this method exists
+                    .collect(Collectors.toList());
+            goalDTO.setSubGoals(subGoalDTOs);
+        } else {
+            goalDTO.setSubGoals(new ArrayList<>());
         }
+
         return goalDTO;
     }
+
+    private SubGoalDTO toSubGoalDTO(SubGoal subGoal) {
+        SubGoalDTO subGoalDTO = new SubGoalDTO();
+        subGoalDTO.setId(subGoal.getId());
+        subGoalDTO.setName(subGoal.getName());
+        subGoalDTO.setCompleted(subGoal.getCompleted());
+        return subGoalDTO;
+    }
+
 
     public Goal ToEntity(GoalDTO goalDTO) {
         Goal goal = new Goal();
         goal.setId(goalDTO.getId());
         goal.setName(goalDTO.getName());
         goal.setCompleted(goalDTO.getCompleted());
+        goal.setTracking(goalDTO.getTrackingId() != null ? new Tracking() : null);
 
         if (goalDTO.getSubGoals() != null) {
             goal.setSubGoals(
